--- a/Views/RecipesModule/RecipesPage.xaml
+++ b/Views/RecipesModule/RecipesPage.xaml
@@ -8,7 +8,125 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="RecipesPage">
 
-    <Grid>
+    <Grid Background="{StaticResource BackgroundBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="68"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Border Grid.Row="0" BorderThickness="0, 0, 0, 0.5" BorderBrush="{StaticResource SecondaryBrush}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="6*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Orientation="Vertical" Margin="20, 0, 0, 10"
+                            HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                    <TextBlock Style="{StaticResource HeaderLabelStyle}" Text="{DynamicResource Recipes_Header}"/>
+                    <TextBlock Style="{StaticResource DescriptionLabelStyle}" Text="{DynamicResource Recipes_Desc}"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" Orientation="Vertical" Margin="20, 0, 0, 10"
+                            HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                    <Button x:Name="BtnNewRecipe" Style="{DynamicResource PrimaryButtonStyle}"
+                            Content="{DynamicResource Recipes_BtnAddRecipe}" Click="Clic_BtnNewRecipe">
+                        <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                    </Button>
+                </StackPanel>
+            </Grid>
+        </Border>
+
+        <Border Grid.Row="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="42"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0, 0, 0, 0.5">
+                    <Grid Margin="20, 0" VerticalAlignment="Center">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBox Grid.Column="0" HorizontalAlignment="Left"
+                                 Style="{DynamicResource SecondarySearchBoxStyle}"
+                                 Width="180"/>
+                    </Grid>
+                </Border>
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="260"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <StackPanel Grid.Row="0" VerticalAlignment="Bottom" Margin="20, 4">
+                            <TextBlock Text="{DynamicResource Recipes_TitleTable}"
+                                       Style="{DynamicResource SubtitleLabelStyle}"/>
+                        </StackPanel>
+                        
+                        <!-- Tabla de recetas -->
+                        <Border Grid.Row="1" Padding="8">
+                            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}"
+                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
+                                      CellStyle="{DynamicResource DataGridCellStyle1}"
+                                      x:Name="recipesDataGrid" Style="{DynamicResource DataGridStyle1}" AutoGenerateColumns="False"
+                                      SelectionChanged="recipesDataGrid_SelectionChanged">
+                                <DataGrid.Columns>
+                                    <!-- Número -->
+                                    <DataGridTextColumn Header="Tiempo preparacion" Binding="{Binding PreparationTime}" IsReadOnly="True" Width="0.5*"/>
+
+                                    <!-- Titulo -->
+                                    <DataGridTextColumn Header="Titulo" Binding="{Binding Description}" IsReadOnly="True" Width="*"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </Border>
+                    </Grid>
+
+                    <Border Grid.Column="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0.5, 0, 0, 0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="4*"/>
+                                <RowDefinition Height="6*"/>
+                                <RowDefinition Height="1.5*"/>
+                            </Grid.RowDefinitions>
+
+                            <!-- TODO add Image on row 0-->
+
+                            <StackPanel Grid.Row="1" Orientation="Vertical" Margin="24, 0">
+                                <TextBlock Text="Pizza de pepperoni"
+                                    Style="{DynamicResource SubtitleLabelStyle}"/>
+                                <TextBlock Text="Ingredientes: " Margin="0, 2, 0, 0"
+                                    Style="{DynamicResource RegularLabelStyle}"
+               
+                                    Foreground="{StaticResource PrimaryButtonBrush}"/>
+                                <TextBlock Text="Ejemplo de descripcion e ingredientes..." 
+                                    Margin="0, 10"
+                                    TextWrapping="Wrap"
+                                    Style="{DynamicResource DescriptionLabelStyle}"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="2" Margin="10, 0" Orientation="Horizontal">
+                                <Button x:Name="BtnDeleteRecipe" Style="{DynamicResource SecondaryButtonStyle}"
+                                        Content="{DynamicResource Recipes_BtnDeleteRecipe}">
+                                    <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
+                                </Button>
+
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                </Grid>
+            </Grid>
+        </Border>
         
     </Grid>
 </Page>
